--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
+buildscript {
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.2'
+  }
+}
+
 apply plugin: 'java'
 apply plugin: 'scala'
+apply plugin: 'com.github.johnrengelman.shadow'
 
 sourceCompatibility = 1.6
 version = '1.0'
@@ -13,8 +23,11 @@ configurations {
     compile.extendsFrom provided
 }
 
-jar {
+task sunnyJar(type: Jar) {
     dependsOn configurations.runtime
+    manifest {
+       attributes 'Main-class': 'com.sunny.spark.demo.SparkDemo'
+    }
     from {
         (configurations.runtime - configurations.provided).collect {
             it.isDirectory() ? it : zipTree(it)
@@ -31,4 +44,13 @@ dependencies {
     compile "com.google.guava:guava:r05"
     //provided "org.scala-lang:scala-library:2.10.4"
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+shadowJar {
+  transform(com.github.jengelman.gradle.plugins.shadow.transformers.AppendingTransformer) {
+    resource = 'reference.conf'
+  }
+  manifest {
+    inheritFrom project.tasks.sunnyJar.manifest
+  }
 }
